--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,66 @@
-@import "tailwindcss";
-
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* COLORS */
+  --bg-main: #0B0C10;
+  --bg-card: #212121;
+  --bg-favorite: #76DD00;
+
+  --text-primary: #FFFFFF;
+  --text-secondary: #C5C6C7;
+  --text-muted: #9CA3AF;
+
+  --accent-green: #76DD00;
+  --accent-red: #F87171;
+
+  /* UI */
+  --radius-sm: 8px;
+  --radius-md: 12px;
+
+  --shadow-card: 0 8px 24px rgba(0, 0, 0, 0.25);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html,
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  background-color: var(--bg-main);
+  color: var(--text-primary);
+  font-family: Inter, system-ui, sans-serif;
+  box-sizing: border-box;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-image: url("/bg-rick-morty.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
+  background-attachment: fixed;
+}
+
+.page {
+  min-height: 100vh;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.75),
+    rgba(0, 0, 0, 0.95)
+  );
+}
+
+.ContentTitle{
+  width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1rem;
+
+    img{
+      width: 20rem;
+    }
+}
+
+.footer{
+      width: 100%;
+    background-color: #76DD00;
+    height: 2rem;
+    margin-top: auto;
 }
